# for display continuity sake please use 2 spaces instead of tabs

2014-10-09 mmichaud <m.michael.michaud@orange.fr>
  * fix #376, #377 : kml driver is working again (plus edition)

2014-10-07 mmichaud <m.michael.michaud@orange.fr>
  * Add an option to save to postgis driver to convert NaN Z values to
    valid Z (requested by mail from Uwe on 2014-10-01/06)
  * Patch RasterImageLayer according to Alberto de Luca patch sent by
    mail on 2014-10-06

2014-10-05 mmichaud <m.michael.michaud@orange.fr>
  * Add 3 plugins for macro recording (needs adaptation in each plugin
    to work effectively).
  * Make the following plugins recordable within a macro
    - BufferPlugIn
    - DisposeSelectedPlugIn
    - RemoveSelectedPlugIn
    - ViewSchemaPlugIn
    - DataSourceFileLayerLoader

2014-09-24 mmichaud <m.michael.michaud@orange.fr>
  * PostGISWriter : improve error handling

2014-09-23 mmichaud <m.michael.michaud@orange.fr>
  * Fix a bug in DataStoreTransactionManager : LayerListener could be added
    several times for the same Task in some circumstances
  * Fix #374 : NormalizedColumnName is set to false if it is not defined
    (ex. old jmp file)

2014-09-22 mmichaud <m.michael.michaud@orange.fr>
  * Fix PasteItems : now set externalPK to null if it exists

2014-09-21 mmichaud <m.michael.michaud@orange.fr>
  * Fix bug #373 : image format chooser was not available in the
    OneSRSWizardPanel

2014-09-21 mmichaud <m.michael.michaud@orange.fr>
  * Add DissolvePlugIn able to dissolve according to several attributes

2014-09-20 mmichaud <m.michael.michaud@orange.fr>
  * DeleteDuplicateGeometries save deleted features in another layer

2014-09-17 mmichaud <m.michael.michaud@orange.fr>
  * DeleteDuplicateGeometries now works also with empty geometries

2014-09-13 mmichaud <m.michael.michaud@orange.fr>
  * Fix #374 : PasteItemsPlugIn did not set target SRIDStyle to pasted items

2014-08-28 ede
  * limit 32bit jre xmx to 2GiB for compatibility reasons, osgeo's lubuntu 